--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.6"
+  },
+  "dependencies": {
+    "tailwindcss": "^1.4.6"
   }
 }
