--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@types/jest": "^26.0.3",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
     "husky": "^4.2.5",
+    "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "react-dom": "^16.13.1",
