--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist",
-    "src"
+    "dist"
   ],
   "engines": {
     "node": ">=10"
@@ -34,7 +33,7 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "optimus",
+  "name": "optimus-ui",
   "author": "AmoDinho",
   "module": "dist/optimus.esm.js",
   "style": "dist/optimus.css",
@@ -53,6 +52,7 @@
     "@types/react-dom": "^16.9.8",
     "autoprefixer": "^9.8.5",
     "babel-loader": "^8.1.0",
+    "cssnano": "^4.1.10",
     "husky": "^4.2.5",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
