--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  },
   "version": "0.0.0-development",
   "license": "MIT",
   "main": "dist/index.js",
