--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "peerDependencies": {
     "react": ">=16"
   },
-  
   "prettier": {
     "printWidth": 80,
     "semi": false,
@@ -65,11 +64,11 @@
     "react-is": "^16.13.1",
     "rollup-plugin-css-only": "^2.1.0",
     "rollup-plugin-postcss": "^3.1.2",
+    "semantic-release": "^17.1.1",
     "ts-loader": "^7.0.5",
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.6",
-    "semantic-release": "^17.1.1"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "tailwindcss": "^1.4.6"
