--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "styled-components": "^5.2.1",
     "tailwindcss": "^1.4.6"
   },
   "repository": {
