--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "rollup-plugin-svg": "^2.0.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "^1.4.6"
   },
