--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "rollup-plugin-postcss": "^3.1.2",
     "semantic-release": "^17.1.1",
     "ts-loader": "^7.0.5",
-    "tsdx": "^0.13.2",
+    "tsdx": "0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^4.2.3"
   },
