Adds assets folder to the path.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src/assets/*"
   ],
   "engines": {
     "node": ">=10"
@@ -73,7 +74,8 @@
   "dependencies": {
     "rollup-plugin-svg": "^2.0.0",
     "styled-components": "^5.2.1",
-    "tailwindcss": "^1.4.6"
+    "tailwindcss": "^1.4.6",
+    "typeface-roboto": "^1.1.13"
   },
   "repository": {
     "type": "git",
