--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "antd": "^4.15.0",
     "rollup-plugin-svg": "^2.0.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "^1.4.6",
