--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
           CI: true
 
       - name: Build
-        run: yarn build
+        run: yarn prepare
         env:
           CI: true
 
